--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,14 @@
-[paste requirements.txt content]
+
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+psycopg2-binary==2.9.9
+sqlalchemy==2.0.23
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+python-multipart==0.0.6
+python-dotenv==1.0.0
+pydantic==2.5.0
+pydantic-settings==2.1.0
+requests>=2.31.0
+streamlit>=1.25.0
+gtts>=2.3.0
