--- a/infra/docker/docker-compose.override.yml
+++ b/infra/docker/docker-compose.override.yml
@@ -1,4 +1,8 @@
 services:
   api:
-    env_file:
-      - .env
+    ports:
+      - "8000:8000"
+    environment:
+      - JWT_SECRET=dev-secret-change-me
+      - SECRET_KEY=dev-secret-change-me
+      - JWT_ALGORITHM=HS256
