--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ email-validator==2.2.0
 fastapi
 fastapi==0.104.1
 gTTS
-gtts>=2.3.0# Core
+gtts>=2.3.0
 openai
 passlib[bcrypt]
 passlib[bcrypt]==1.7.4
